# mch2022-rust-esp32

./: .gitignore  Cargo.toml  Makefile  README.rst  config.mk.example  sdkconfig
.cargo/: config.toml
lib/: Makefile
lib/mchcoproc/: Cargo.toml  Makefile
lib/mchcoproc/src/: events.rs  lib.rs  mchcoproc.rs  registers.rs
lib/mchdisplay/: Cargo.toml  Makefile
lib/mchdisplay/src/: framebuffer.rs  lib.rs  mchdisplay.rs
src/: lib.rs  util.rs  wifi.rs
