[package]
edition = "2021"
# Rename to hellomch for now
name    = "hellomch"
version = "0.1.0"

[[bin]]
name = "hellomch"
path = "./src/bin/main.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
#codegen-units    = 1     # LLVM can perform better optimizations using a single thread
#debug            = 2
#debug-assertions = false
#incremental      = false
#lto              = 'fat'
opt-level = "s"
#overflow-checks  = false

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]
version-from-env = []

[dependencies]
hellomch-mchdisplay = { path = "lib/mchdisplay" }

log = "0.4"
esp-idf-svc = { version = "0", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
git-version = "0.3"

[build-dependencies]
embuild = "0.33"
