[package]
# Renamed to hellomch for now
name    = "hellomch"
edition = "2021"
version = "0.1.0"

[[bin]]
name = "hellomch"
path = "./src/bin/main.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = []
experimental = ["esp-idf-svc/experimental"]
version-from-env = []
with-wifi = []

[dependencies]
hellomch-mchcoproc = { path = "lib/mchcoproc" }
hellomch-mchdisplay = { path = "lib/mchdisplay", features = ["with-framebuffer", "with-psram"] }

log = "0.4"
esp-idf-svc = { version = "0", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

anyhow = "1"
git-version = "0.3"
heapless = "0"

[profile.release]
#codegen-units = 1       # LLVM can perform better optimizations using a single thread
debug = false
opt-level = "s"		# Optimize for speed
#debug-assertions = false
#overflow-checks  = false
#incremental = false
lto = 'fat'		# Or 'thin' if 'fat' is too slow

[profile.dev]
debug = true		# Symbols are nice and they don't increase the size on Flash
opt-level = 1		# More optimizations than 0 or "z"
debug-assertions = true
overflow-checks = true
lto = false

[build-dependencies]
embuild = "0.33"
