[package]
name = "hellomch-mchdisplay"
edition = "2021"
version = "0.1.0"

[features]
default = []		# Default, no framebuffer
with-framebuffer = []	# Optional: Enable framebuffer, which requires 150KiB memory
with-psram = []

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
display-interface = "0.5"
display-interface-spi = "0.5"
embedded-hal = "1"
embedded-graphics = "0.8"
ili9341 = "0.6"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
#codegen-units    = 1     # LLVM can perform better optimizations using a single thread
#debug            = 2
#debug-assertions = false
#incremental      = false
#lto              = 'fat'
opt-level        = 's'
#overflow-checks  = false

[build-dependencies]
embuild = "0.33"
